--- a/_includes/social.html
+++ b/_includes/social.html
@@ -2,6 +2,10 @@
 
   {%- assign unfocused_color = "6c757d" -%}
 
+<p style="text-align: center; font-size: 14px;color: #{{ unfocused_color }}">
+  © 2024 Armonizadogs. Todos los derechos reservados.
+</p>
+
   {% for account in site.author %}
 
     {%- assign service_name = account[0] -%}
